# tSZPaint.py

./: .gitattributes  .gitignore  .rgignore  check_step0628_zoom.sh  machine.file.21657740  machine.file.21659429  main.py  plot_healmap_zoom.py  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
ACT_forward_model/: ACT_data_match.py  dynesty_inference.py  fig6_pz2.npy  gp_emulator.py  lhc_samples.txt  loo_3d_plot.py  loo_full.py  loo_full_results.txt  loo_validation.py  merge_batch_stacks.py  merge_hod_stacks.py  plot_dynesty_fit.py  plot_stacked.py  preconvolve_maps.py  run_stacking.py  submit_lhc.py  submit_loo_full.py  sum_y_maps.py
abacusHOD/: HOD_lhc_emulator.py  config.yaml  dynesty_inference.py  filter_lrg_by_chi.py  hod_lhc_samples.txt  loo_hod.py  prepare_sim.py  run_hod.py  run_hod_lhc_catalogs.py  run_hod_lhc_stacking.py  submit_hod_lhc.sh  submit_hod_lhc_merge.sh  submit_loo_hod.sh  submit_preconvolve.sh
benchmarks/: benchmark_weights.py  compare.jl  interpolator_comparison_to_xgpaint.py  interpolator_performance_plot.py  neighbourhood_search_comparison.py  paint_comparison_plot.py  paint_comparison_to_xgpaint.py
conf/: config.yaml
data/: benchmark_y_profile.csv  healcount_redshifts.txt
logs/: 22817596_4294967294.err  22817596_4294967294.out  22817805_4294967294.err  22817805_4294967294.out  22818456_4294967294.err  22818456_4294967294.out  22818774_4294967294.err  22818774_4294967294.out  22834346.err  22834346.out  22834733.err  22834733.out  22835010.err  22835010.out  22835573.err  22835573.out  22835676.err  22835676.out  22835854.err  22835854.out  22836464.err  22836464.out  22836574.err  22836574.out  22837109.err  22837109.out  22867581.err  (+28 more)
(+62 files in other folders)
